Made AdminTable extends AbstractTable for reducing amount of code